--- a/wallet-watch-frontend/src/app/reminders/reminders.component.css
+++ b/wallet-watch-frontend/src/app/reminders/reminders.component.css
@@ -5,6 +5,14 @@ html {
   height: 100%;
   background-color: #f8f9fa;
 }
+.container {
+  max-width: 1200px;
+  margin-top: 2rem; /* Adjust spacing from the navbar */
+  min-height: calc(100vh - 150px); /* Adjust for the navbar and footer height */
+  display: flex;
+  flex-direction: column;
+}
+
 
 .hero {
   background-color: #007bff;
